# vpn_tg_bot

./: .env.example  .example.env  .gitignore  Dockerfile  Makefile  README.md  Readme.md  docker-compose.monitorig.yml  docker-compose.prod.yml  docker-compose.yml  docker_compose.sh  er.py  install.sh  package-lock.json  pyproject.toml  q.py  requirements.txt  sad.py  setup_env.sh  test.py  test_aiohttp.py
app/: bot.py  main.py  web_app.py
app/api/: main.py  paid.py
app/application/: exception.py  exeption.py
app/bot/: depends.py  deps.py  main.py  utils.py
app/configs/: app.py
app/presentation/: cookies.py  deps.py  exceptions.py  init_data.py  main.py
app/settings/: config.py
app/webapp/: app.py
app/workers/: taskiq_worker.py
docker_compose/: app.yaml  broker.yaml  monitoring.yaml  nginx.yaml  storage.yaml  webserver.yaml
frontend/: DEPLOYMENT.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
nginx/: nginx.conf  start.conf
nginx/conf.d/: default.conf
nginx/start/: default.conf.template
nginx/templates/: default.conf.template
tests/mocks/: mock_api_client.py  mock_discount_repository.py  mock_discount_user_repository.py  mock_mediator.py  mock_order_repository.py  mock_payment_repository.py  mock_payment_service.py  mock_protocol_builder.py  mock_reward_repository.py  mock_reward_user_repository.py  mock_server_repository.py  mock_subscription_repository.py  mock_tgbot.py  mock_user_repository.py
tests/unit/: conftest.py
(+300 files in other folders)
