[project]
name = "vpn-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Forgot-0",email = "mr.aisamutdin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "punq (>=0.7.0,<0.8.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"